--- a/src/main/webapp/admin/institutions/admin_mange_department_preferences.xhtml
+++ b/src/main/webapp/admin/institutions/admin_mange_department_preferences.xhtml
@@ -25,7 +25,7 @@
                                         <h:outputLabel value="Pharmacy Bill Paper" ></h:outputLabel>
                                         <p:selectOneMenu value="#{sessionController.currentPreference.pharmacyBillPaperType}" >
                                             <f:selectItem itemLabel="Please Select Paper Type" />
-                                            <f:selectItems value="#{enumController.paperTypes}" ></f:selectItems>
+                                            <f:selectItems var="t" itemLabel="#{t.label}" itemValue="#{t}" value="#{enumController.paperTypes}" ></f:selectItems>
                                         </p:selectOneMenu>
                                         <h:outputLabel value="GRN Detaied" ></h:outputLabel>
                                         <p:selectBooleanButton class="form-control" offIcon="fas fa-check" onIcon="fas fa-times" value="#{sessionController.currentPreference.grnBillDetailed}" ></p:selectBooleanButton>
