Signed-off-by: Thiwanka570 <jvptmadushan@gmail.com>

--- a/src/main/webapp/inward/inward_bill_outside_charge.xhtml
+++ b/src/main/webapp/inward/inward_bill_outside_charge.xhtml
@@ -84,7 +84,7 @@
                                             <div>
                                                 <p:selectOneMenu class="w-100" value="#{inwardAdditionalChargeController.inwardChargeType}" >
                                                     <f:selectItem itemLabel="Please select Charge"/>
-                                                    <f:selectItems var="charg" itemLabel="#{charg.label}" itemValue="#{charg}"  value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
+                                                    <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
                                                 </p:selectOneMenu>
                                             </div>
                                         </div>
