--- a/src/main/webapp/admin/institutions/admin_mange_department_preferences.xhtml
+++ b/src/main/webapp/admin/institutions/admin_mange_department_preferences.xhtml
@@ -377,10 +377,13 @@
 
 
                                         <h:outputLabel value="Institution" ></h:outputLabel>
+
                                         <p:selectOneMenu value="#{sessionController.currentPreference.applicationInstitution}" >
                                             <f:selectItem itemLabel="Select Institution" />
-                                            <f:selectItems var="institute" itemLabel="#{institute.label}" itemValue="#{institute}" value="#{enumController.applicationInstitutions}" ></f:selectItems>
+                                            <f:selectItems var="institute" itemValue="#{institute}" value="#{enumController.applicationInstitutions}" ></f:selectItems>
                                         </p:selectOneMenu>
+
+
                                         <h:outputLabel value="Logo Name"></h:outputLabel>
                                         <h:inputText id="imgName" value="#{sessionController.currentPreference.logoName}"/>
                                         <p:watermark for="imgName" value="Eg- /abc.jpg" />
